<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <include
        android:id="@+id/top_layout"
        layout="@layout/commont_title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/line3"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/evaluation_list_header_normal_background_shape">

            <TextView
                android:id="@+id/praise"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_5"
                android:background="@drawable/edit_evaluation_text_background_select"
                android:drawableLeft="@drawable/ic_smiling_face"
                android:drawablePadding="@dimen/dp_11"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_45"
                android:paddingRight="@dimen/dp_45"
                android:text="@string/praise"
                android:textColor="@color/edit_evaluation_text_color_select"
                android:textSize="@dimen/dp_15"
                app:layout_constraintHorizontal_chainStyle="packed"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/amendment"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/amendment"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_5"
                android:background="@drawable/edit_evaluation_text_background_select"
                android:drawableLeft="@drawable/ic_cry"
                android:drawablePadding="@dimen/dp_11"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_45"
                android:paddingRight="@dimen/dp_45"
                android:text="@string/amendment"
                android:textColor="@color/edit_evaluation_text_color_select"
                android:textSize="@dimen/dp_15"
                app:layout_constraintBottom_toBottomOf="@+id/praise"
                app:layout_constraintLeft_toRightOf="@+id/praise"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/praise" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/edit_evaluation_text_background_shape"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amendment">

                <TextView
                    android:id="@+id/evaluation_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_13"
                    android:layout_marginTop="@dimen/dp_33"
                    android:includeFontPadding="false"
                    android:text="@string/evaluation_name_text"
                    android:textColor="@color/text_normal_color2"
                    android:textSize="@dimen/dp_14"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/evaluation_name"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginRight="@dimen/dp_12"
                    android:background="@drawable/edit_evaluation_name_shape"
                    android:gravity="center|left"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:hint="积极回答问题"
                    android:textColorHint="@color/textGrayDeep_6"
                    android:textColor="@color/text_normal_color2"
                    android:textCursorDrawable="@drawable/input_cursor_drawable"
                    android:textSize="@dimen/dp_14"
                    app:layout_constraintBottom_toBottomOf="@+id/evaluation_name_text"
                    app:layout_constraintLeft_toRightOf="@+id/evaluation_name_text"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/evaluation_name_text" />


                <TextView
                    android:id="@+id/score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_26"
                    android:includeFontPadding="false"
                    android:text="@string/score_text1"
                    android:textColor="@color/text_normal_color2"
                    android:textSize="@dimen/dp_14"
                    app:layout_constraintRight_toRightOf="@+id/evaluation_name_text"
                    app:layout_constraintTop_toBottomOf="@+id/evaluation_name_text" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/score"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginRight="@dimen/dp_12"
                    android:background="@drawable/edit_evaluation_name_shape"
                    android:gravity="center|left"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:hint="@string/scoring_instructions"
                    android:textColorHint="@color/textGrayDeep_6"
                    android:textColor="@color/text_normal_color2"
                    android:textCursorDrawable="@drawable/input_cursor_drawable"
                    android:textSize="@dimen/dp_14"
                    app:layout_constraintBottom_toBottomOf="@+id/score_text"
                    app:layout_constraintLeft_toRightOf="@+id/score_text"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/score_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.futureeducation.commonmodule.view.CommonShapeButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:layout_marginLeft="@dimen/dp_33"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_33"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_15"
            app:csb_activeEnable="true"
            app:csb_cornerRadius="@dimen/dp_4"
            app:csb_fillColor="@color/button_normal_style2"
            app:csb_pressedColor="@color/button_pressed" />

    </LinearLayout>
</LinearLayout>